# factory

./: .gitignore  CMakeLists.txt  a.out  combined.cpp  downloads.sh  expander.sh  g.out  generate.cpp  generate.py  main.cpp  solve.py  submit.sh  t.out  tle.cpp
F/: a.out
Marathon/: a.out  main.cpp
Marathon/tools/: vis.html
Marathon/tools/score/: 0000.txt  0001.txt  0002.txt  0003.txt  0004.txt  0005.txt  0006.txt  0007.txt  0008.txt  0009.txt  0010.txt  0011.txt  0012.txt  0013.txt  0014.txt  0015.txt  0016.txt  0017.txt  0018.txt  0019.txt  0020.txt  0021.txt  0022.txt  0023.txt  0024.txt  0025.txt  0026.txt  0027.txt  0028.txt  0029.txt  0030.txt  0031.txt  0032.txt  0033.txt  0034.txt  0035.txt  0036.txt  0037.txt  0038.txt  0039.txt  (+60 more)
test/: random-000.in  random-001.in  random-002.in  random-003.in  random-004.in
